bynkc/tests/fixtures/negative/48_uses_name_conflict/src/c/main.bynk
commons c

uses a
uses b

type X = Int
